# grpc-gateway/docs/swagger.json
@@ -132,17 +132,6 @@
                     "user_service"
                 ],
                 "summary": "V1GetAll",
-                "parameters": [
-                    {
-                        "description": "body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/user_service.V1GetAllRequest"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -420,9 +409,6 @@
                     "type": "string"
                 }
             }
-        },
-        "user_service.V1GetAllRequest": {
-            "type": "object"
         },
         "user_service.V1GetAllResponse": {
             "type": "object",
